# hack-secret-repositories

./: README.md
Akashathon i/: README.md
Akashathon ii/: README.md
EthBucharest/: README.md
EthDam/: README.md
EthDenver/: README.md
HackSecret i/: README.md
HackSecret i/agoraQ/AgoraQ_Back_End/: .gitignore  Cargo.toml  README.md
HackSecret i/agoraQ/AgoraQ_Back_End/src/: contract.rs  lib.rs  msg.rs  receiver.rs  state.rs
HackSecret i/agoraQ/AgoraQ_Front_End/: 401.html  404.html  about.html  contact.html  createBuyer.html  createListing.html  index.html  listings.html  myListings.html  readme.md  sell.html
HackSecret i/agoraQ/AgoraQ_Front_End/css/: agoraq.webflow.css
HackSecret i/agoraQ/AgoraQ_Front_End/js/: createBuyer.js  createListing.js  keplr.js  listings.js  myListings.js  sell.js  webflow.js
HackSecret ii/SP.js/: Examples.md  package.json  tsconfig.json
HackSecret ii/SP.js/src/: convert-schema.ts  index.ts
HackSecret ii/SP.js/src/deployment/: Deployment.ts  deploy.ts  index.ts
HackSecret ii/SP.js/src/tests/: README.md
HackSecret iii/: README.md
SP.js/: README.md  package-lock.json
SP.js/src/deployment/artifacts/: snip20-info.ts  snip721-info.ts
SP.js/src/deployment/contracts/: Snip721Deployment.ts  constants.ts
SP.js/src/modules/shade/: Shade.ts  common_types.ts
SP.js/src/modules/shared/: README.md  index.ts
SP.js/src/modules/snip20/: README.md  Snip20.ts
SP.js/src/modules/snip721/: Snip721.ts
SP.js/src/tests/shade/: admin.test.ts  factory.test.ts  router.test.ts
signal/: README.md
(+68 files in other folders)
